# webmac

./: .gitignore  Cargo.toml  LICENSE  README.md  base.sqlite  db.py  listas.md  main.py  notas  readme.md  requirements.txt  schema.sql  start.sh  utils.py  wsgi.py
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json
frontend/src/: App.js
src/: main.rs
static/: index.html  style.css
static/css/: _style.css  style.css
static/js/: canvas.js  canvas.ts  index.js  index.ts  pixel.js  pixel.ts  tsconfig.json
templates/: index.html  layout.html  login.html  panel.html  pixel.html  register.html
