[package]
name = "backend"
version = "0.1.0"
authors = ["yollotltamayo <yollotltamayo@comunidad.unam.mx>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = "0.4.7"
rocket_cors = "0.4.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0.40"
